aggiornato lo shop (cambio sfondi, z-index footer,  popup importato da custom).  aggiornato carrello (fix $total=0, carrello scrollabile)

--- a/styles/carrello.css
+++ b/styles/carrello.css
@@ -44,6 +44,8 @@
     margin-bottom: 2%;
     border-bottom: 2px solid rgba(33, 34, 34, 0.2);
     height: 60%;
+
+    overflow-y: auto;  /*aggiunta 27/05*/
 }
 
 .tabella {
