--- a/styles/shop.css
+++ b/styles/shop.css
@@ -147,7 +147,7 @@ body {
 
     background-color: #7E5E47;
     box-shadow: inset 0 calc(var(--sizevar) * 3) calc(var(--sizevar) * 12) #212222;
-    background-image: url("../img/mc04.jpg");
+    background-image: url("../img/shop/chicchi1.jpg");
     background-size: cover;
 
     position: relative;
@@ -257,6 +257,7 @@ body {
 .shop-home {
     background-image: url("../img/home/caffetazza.jpg");
     background-size: cover;
+    background-position: center;
 
     display: flex;
     flex-direction: column;
@@ -275,7 +276,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    background-color: rgba(33,34,34,0.4);
+    background-color: rgba(33,34,34,0.5);
     transition: background-color 0.5s ease;
 
     width: 100vw;
@@ -379,11 +380,52 @@ body {
     font-weight: bolder;
 
     cursor: pointer;
-    /*position: absolute;
-    top: calc(var(--sizevar) * 120);*/
     position: fixed;
     bottom: 10%;
     right: 5%;
     z-index: 1;
     transition: transform 0.2s ease, background-color 0.2s ease;
+}
+
+
+/* 27/05 */
+.footer {
+    z-index: 2;
+}
+
+/*STILI PER IL POPUP*/
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+}
+
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
